--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>H.S. Reviews</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+	    <div class="header"><h1>H.S. Reviews</h1></div>
+	    <div class="content">
+	        <p></p>
+	    </div>
+	</body>
+</html>
