--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 	    <div class="header"><h1>H.S. Reviews</h1></div>
 	    <div class="content">
-	        <p></p>
+	        <p>On this website, we'll examine all the current models of four of the top exotic car manufacturers. Lamborghini, Ferrari, Porsche, Mclaren are all pioneers in the auto industry and design some of the most stunning and fastest cars in the world. Let's take a look at their cars.</p>
 	    </div>
 	</body>
 </html>
