--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 	    <div class="header"><h1>H.S. Reviews</h1></div>
 	    <div class="content">
-	        <p>On this website, we'll examine all the current models of four of the top exotic car manufacturers. Lamborghini, Ferrari, Porsche, Mclaren are all pioneers in the auto industry and design some of the most stunning and fastest cars in the world. Let's take a look at their cars.</p>
+	        <p>On this website, we'll examine all the current models of three of the top exotic car manufacturers. Lamborghini, Ferrari and Mclaren are all pioneers in the auto industry and design some of the most stunning and fastest cars in the world. Let's take a look at their cars.</p>
+					<img src="img/720s.jpeg" alt="Oval Office">
 	    </div>
 	</body>
 </html>
