added new logos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	        <p>On this website, we'll examine all the current models of three of the top exotic car manufacturers. Lamborghini, Ferrari and Mclaren are all pioneers in the auto industry and design some of the most stunning and fastest cars in the world. Let's take a look at their cars.</p>
 					<img class="main_image" src="img/home_image.jpeg" alt="Home Image">
 	    </div>
-			
+			<div class="footer">
+			<a href="lambo.html"><<img src="img/lamborghini-logo.jpeg" alt="Image">/a>
+			<a href="ferrari.html"><<img src="img/ferrari-logo.jpeg" alt="Image">/a>
+			<a href="mclaren.html"><<img src="img/mclaren-logo.jpeg" alt="Image">/a>
+			</div>
+
 	</body>
 </html>
