--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 					<img class="main_image" src="img/home_image.jpeg" alt="Home Image">
 	    </div>
 			<div class="footer">
-			<a href="lambo.html"><<img src="img/lamborghini-logo.jpeg" alt="Image">/a>
-			<a href="ferrari.html"><<img src="img/ferrari-logo.jpeg" alt="Image">/a>
-			<a href="mclaren.html"><<img src="img/mclaren-logo.jpeg" alt="Image">/a>
+			<a href="lambo.html"><<img style="width:500px;height:600px;" src="img/lamborghini-logo.jpeg" alt="Image">/a>
+			<a href="ferrari.html"><<img style="width:500px;height:600px;" src="img/ferrari-logo.jpeg" alt="Image">/a>
+			<a href="mclaren.html"><<img style="width:500px;height:600px;" src="img/mclaren-logo.jpeg" alt="Image">/a>
 			</div>
 
 	</body>
