--- a/ferrari.html
+++ b/ferrari.html
@@ -8,7 +8,9 @@
 	    <div class="header"><h1>H.S. Reviews</h1></div>
 	    <div class="content">
 	        <p></p>
-					
+          <img class="car_models" src="img/F8.jpeg" alt="F8">
+          <img class="car_models" src="img/portofino.jpeg" alt="Portofino">
+          <img class="car_models" src="img/sf90.jpeg" alt="SF90">
 	    </div>
 			<div class="footer">
 			<a href="lambo.html"><<img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image">/a>
