--- a/lambo.html
+++ b/lambo.html
@@ -8,7 +8,9 @@
 	    <div class="header"><h1>H.S. Reviews</h1></div>
 	    <div class="content">
 	        <p></p>
-					
+					<img class="car_models" src="img/aventador.jpeg" alt="Aventador">
+          <img class="car_models" src="img/huracan.jpeg" alt="Huracan">
+          <img class="car_models" src="img/urus.jpeg" alt="Urus">
 	    </div>
 			<div class="footer">
 			<a href="lambo.html"><<img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image">/a>
