styled the poll

--- a/voting.html
+++ b/voting.html
@@ -23,7 +23,7 @@
 					<img class="main_image" src="img/home_image.jpeg" alt="Home Image">
 	    </div>
       <div id="poll">
-      <h3>Do you like PHP and AJAX so far?</h3>
+      <h3>Have you learned about cars today?</h3>
       <form>
       Yes: <input type="radio" name="vote" value="0" onclick="getVote(this.value)"><br>
       No: <input type="radio" name="vote" value="1" onclick="getVote(this.value)">
