changed header into a link

--- a/lambo.html
+++ b/lambo.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-	    <div class="header"><h1>H.S. Reviews</h1></div>
+		<div class="header">
+			<a href="index.html"><h1>H.S. Reviews</h1></a>
+		</div>
 	    <div class="content">
 	        <p></p>
 					<img class="car_models" src="img/aventador.jpeg" alt="Aventador">
