--- a/voting.html
+++ b/voting.html
@@ -17,7 +17,9 @@
   </script>
 	</head>
 	<body>
-	    <div class="header"><h1>Voting Page</h1></div>
+    <div class="header">
+      <a href="index.html"><h1>H.S. Reviews</h1></a>
+    </div>
 	    <div class="content">
 	        <p></p>
 					<img class="main_image" src="img/home_image.jpeg" alt="Home Image">
