--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-	    <div class="header"><h1>H.S. Reviews</h1></div>
+	    <div class="header">
+				<a href="index.html"><h1>H.S. Reviews</h1></a>
+			</div>
 	    <div class="content">
 	        <p>On this website, we'll examine all the current models of three of the top exotic car manufacturers. Lamborghini, Ferrari and Mclaren are all pioneers in the auto industry and design some of the most stunning and fastest cars in the world. Let's take a look at their cars.</p>
 					<img class="main_image" src="img/home_image.jpeg" alt="Home Image">
