--- a/lambo.html
+++ b/lambo.html
@@ -15,9 +15,9 @@
           <img class="car_models" src="img/urus.jpeg" alt="Urus">
 	    </div>
 			<div class="footer">
-			<a href="lambo.html"><<img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image">/a>
-			<a href="ferrari.html"><<img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image">/a>
-			<a href="mclaren.html"><<img style="width:380px;height:170px;" src="img/mclaren-logo.jpeg" alt="Image">/a>
+			<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
+			<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
+			<a href="mclaren.html"><img style="width:380px;height:170px;" src="img/mclaren-logo.jpeg" alt="Image"></a>
 			</div>
 
 	</body>
