--- a/lambo.html
+++ b/lambo.html
@@ -8,12 +8,17 @@
 		<div class="header">
 			<a href="index.html"><h1>H.S. Reviews</h1></a>
 		</div>
-	    <div class="content">
-	        <p></p>
-					<img class="car_models" src="img/aventador.jpeg" alt="Aventador">
+	    <div class="row">
+				<div class="column">
+	        <img class="car_models" src="img/aventador.jpeg" alt="Aventador">
+				</div>
+				<div class="column">
           <img class="car_models" src="img/huracan.jpeg" alt="Huracan">
-          <img class="car_models" src="img/urus.jpeg" alt="Urus">
-	    </div>
+				</div>
+				<div class="column">
+					<img class="car_models" src="img/urus.jpeg" alt="Urus">
+        </div>
+			</div>
 			<div class="footer">
 			<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
 			<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
