created a new button on the bottom

--- a/lambo.html
+++ b/lambo.html
@@ -24,6 +24,9 @@
 			<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
 			<a href="mclaren.html"><img style="width:380px;height:170px;" src="img/mclaren-logo.jpeg" alt="Image"></a>
 			</div>
+			<div class="sub_footer">
+			<a href="voting.html"><h1>Voting Page</h1></a>
+			</div>
 
 	</body>
 </html>
