--- a/mclaren.html
+++ b/mclaren.html
@@ -13,6 +13,10 @@
           <img class="car_models" src="img/675lt.jpeg" alt="675LT">
           <img class="car_models" src="img/720s.jpeg" alt="720S">
           <img class="car_models" src="img/senna.jpeg" alt="Senna">
+					<ul>
+						<li>3 Car Models</li>
+						<li>Senna, 675LT, 720S</li>
+					</ul>
 	    </div>
 			<div class="footer">
 				<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
