--- a/lambo.html
+++ b/lambo.html
@@ -10,13 +10,13 @@
 		</div>
 	    <div class="row">
 				<div class="column">
-	        <img class="car_models" src="img/aventador.jpeg" alt="Aventador">
+	        <img class="car_models" style="width:380px;height:170px;" src="img/aventador.jpeg" alt="Aventador">
 				</div>
 				<div class="column">
-          <img class="car_models" src="img/huracan.jpeg" alt="Huracan">
+          <img class="car_models" style="width:380px;height:170px;" src="img/huracan.jpeg" alt="Huracan">
 				</div>
 				<div class="column">
-					<img class="car_models" src="img/urus.jpeg" alt="Urus">
+					<img class="car_models" style="width:380px;height:170px;" src="img/urus.jpeg" alt="Urus">
         </div>
 			</div>
 			<div class="footer">
