added new images

--- a/mclaren.html
+++ b/mclaren.html
@@ -8,16 +8,17 @@
 		<div class="header">
 			<a href="index.html"><h1>H.S. Reviews</h1></a>
 		</div>
-	    <div class="content">
-					<ul>
-						<li>3 Car Models</li>
-						<li>Senna, 675LT, 720S</li>
-						<li>Top Speed: 200mph</li>
-					</ul>
-          <img class="car_models" src="img/675lt.jpeg" alt="675LT">
-          <img class="car_models" src="img/720s.jpeg" alt="720S">
-          <img class="car_models" src="img/senna.jpeg" alt="Senna">
-	    </div>
+		<div class="row">
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/675lt.jpeg" alt="675lt">
+			</div>
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/senna.jpeg" alt="Senna">
+			</div>
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/720s.jpeg" alt="720s">
+			</div>
+		</div>
 			<div class="footer">
 				<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
 				<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
