--- a/ferrari.html
+++ b/ferrari.html
@@ -8,12 +8,17 @@
 		<div class="header">
 			<a href="index.html"><h1>H.S. Reviews</h1></a>
 		</div>
-	    <div class="content">
-	        <p></p>
-          <img class="car_models" src="img/F8.jpeg" alt="F8">
-          <img class="car_models" src="img/portofino.jpeg" alt="Portofino">
-          <img class="car_models" src="img/sf90.jpeg" alt="SF90">
-	    </div>
+		<div class="row">
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/F8.jpeg" alt="F8">
+			</div>
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/sf90.jpeg" alt="SF90">
+			</div>
+			<div class="column">
+				<img class="car_models" style="width:380px;height:170px;" src="img/portofino.jpeg" alt="portofino">
+			</div>
+		</div>
 			<div class="footer">
 				<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
 				<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
