--- a/lambo.html
+++ b/lambo.html
@@ -46,6 +46,7 @@
 						<td>7.5/10</td>
 						<td>$220,000</td>
 					</tr>
+				</table>
 			<div class="footer">
 			<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
 			<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
