added table and paragraph to each page

--- a/ferrari.html
+++ b/ferrari.html
@@ -19,6 +19,35 @@
 				<img class="car_models" style="width:380px;height:170px;" src="img/portofino.jpeg" alt="portofino">
 			</div>
 		</div>
+		<div class="content">
+			<p>Lamborghini was founded in 1963 in Sant'Agata, Italy. They were originally a tractor company, but turned to cars when Horacio Lamborghini was unhappy with the performance of his Ferrari. Currently they have 3 models. The Stats about each model is listed below.</p>
+			<table>
+				<tr>
+					<th>Name:</th>
+					<th>Top Speed</th>
+					<th>Rating</th>
+					<th>Price</th>
+				</tr>
+				<tr>
+					<td>Aventador</td>
+					<td>219 MPH</td>
+					<td>8.5/10</td>
+					<td>$500,000</td>
+				</tr>
+				<tr>
+					<td>Huracan</td>
+					<td>201 MPH</td>
+					<td>10/10</td>
+					<td>$200,000</td>
+				</tr>
+				<tr>
+					<td>Urus</td>
+					<td>190 MPH</td>
+					<td>7.5/10</td>
+					<td>$220,000</td>
+				</tr>
+			</table>
+		</div>
 			<div class="footer">
 				<a href="lambo.html"><img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image"></a>
 				<a href="ferrari.html"><img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image"></a>
