--- a/ferrari.html
+++ b/ferrari.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="content">
-			<p>Lamborghini was founded in 1963 in Sant'Agata, Italy. They were originally a tractor company, but turned to cars when Horacio Lamborghini was unhappy with the performance of his Ferrari. Currently they have 3 models. The Stats about each model is listed below.</p>
+			<p>Ferrari is probably the most well known brand on this list. Ferrari is the oldest brand as they were founded in 1947, in Maranello Italy. The cars of Ferrari are all lightning quick and incredibly fun to drive.</p>
 			<table>
 				<tr>
 					<th>Name:</th>
@@ -29,22 +29,22 @@
 					<th>Price</th>
 				</tr>
 				<tr>
-					<td>Aventador</td>
-					<td>219 MPH</td>
-					<td>8.5/10</td>
-					<td>$500,000</td>
+					<td>SF90</td>
+					<td>211 MPH</td>
+					<td>6.5/10</td>
+					<td>$625,000</td>
 				</tr>
 				<tr>
-					<td>Huracan</td>
-					<td>201 MPH</td>
+					<td>F8</td>
+					<td>211 MPH</td>
 					<td>10/10</td>
-					<td>$200,000</td>
+					<td>$276,000</td>
 				</tr>
 				<tr>
-					<td>Urus</td>
-					<td>190 MPH</td>
-					<td>7.5/10</td>
-					<td>$220,000</td>
+					<td>Portofino</td>
+					<td>200 MPH</td>
+					<td>9.5/10</td>
+					<td>$215,000</td>
 				</tr>
 			</table>
 		</div>
