--- a/mclaren.html
+++ b/mclaren.html
@@ -29,22 +29,22 @@
 					<th>Price</th>
 				</tr>
 				<tr>
-					<td>Aventador</td>
-					<td>219 MPH</td>
-					<td>8.5/10</td>
-					<td>$500,000</td>
+					<td>675lt</td>
+					<td>205 MPH</td>
+					<td>9/10</td>
+					<td>$350,000</td>
 				</tr>
 				<tr>
-					<td>Huracan</td>
-					<td>201 MPH</td>
-					<td>10/10</td>
-					<td>$200,000</td>
+					<td>Senna</td>
+					<td>208 MPH</td>
+					<td>9/10</td>
+					<td>$999,999</td>
 				</tr>
 				<tr>
-					<td>Urus</td>
+					<td>720s</td>
 					<td>190 MPH</td>
-					<td>7.5/10</td>
-					<td>$220,000</td>
+					<td>7/10</td>
+					<td>$300,000</td>
 				</tr>
 			</table>
 		</div>
