--- a/mclaren.html
+++ b/mclaren.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="content">
-			<p>Lamborghini was founded in 1963 in Sant'Agata, Italy. They were originally a tractor company, but turned to cars when Horacio Lamborghini was unhappy with the performance of his Ferrari. Currently they have 3 models. The Stats about each model is listed below.</p>
+			<p>Although the youngest car brand on this list, Mclaren should not be counted out. Originally a racing company owned by Bruce Mclaren, Mclarens have dominated the auto racing industry for many years. Now, they have shifted much of their resources to making fast and sporty automobiles.</p>
 			<table>
 				<tr>
 					<th>Name:</th>
