--- a/voting.html
+++ b/voting.html
@@ -30,7 +30,12 @@
       Yes: <input type="radio" name="vote" value="0" onclick="getVote(this.value)"><br>
       No: <input type="radio" name="vote" value="1" onclick="getVote(this.value)">
       </form>
-      </div>
+			<ul>
+				<li>This Website was designed and built for educationaly purposes only.</li>
+				<li>If you know someone in the market for an automobile like one of these, don't hesitate to send them this website.</li>
+				<li>If there are any problems with this website, please contact us: support@hsreviews.com</li>
+			</ul>
+			</div>
 			<div class="footer">
 			<a href="lambo.html"><<img style="width:380px;height:170px;" src="img/lamborghini-logo.jpeg" alt="Image">/a>
 			<a href="ferrari.html"><<img style="width:380px;height:170px;" src="img/ferrari-logo.jpeg" alt="Image">/a>
