--- a/ferrari.html
+++ b/ferrari.html
@@ -4,7 +4,7 @@
 		<title>H.S. Reviews</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body style="background-color:black;>
 		<div class="header">
 			<a href="index.html"><h1>H.S. Reviews</h1></a>
 		</div>
