--- a/voting.html
+++ b/voting.html
@@ -16,7 +16,7 @@
     }
   </script>
 	</head>
-	<body style="background-color:black;>
+	<body style="background-color:black;text-align:center;;>
     <div class="header">
       <a href="index.html"><h1>H.S. Reviews</h1></a>
     </div>
